# SmartExpenseTracker

./: .env  db_utils.py  expenses.db  frontend_client.py  main.py  pyproject.toml  test.py
dbs/: expenses.db
utils/: voice_models.py
